{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 609,
  "lineage": "8bc58613-ae49-7e96-64d7-d2ab1b9f63c3",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080",
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-18T18:01:51.941-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/iti-project-369013/global/firewalls/tf-allow-ssh",
            "name": "tf-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network",
            "priority": 1000,
            "project": "iti-project-369013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/firewalls/tf-allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "health_check_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "10256"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-18T18:02:10.813-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/iti-project-369013/global/firewalls/tf-allow-health-check",
            "name": "tf-allow-health-check",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network",
            "priority": 1000,
            "project": "iti-project-369013",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/firewalls/tf-allow-health-check",
            "source_ranges": [
              "10.0.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tf_network",
            "google_compute_subnetwork.tf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "vm_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20221102",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/zones/us-central1-b/disks/terraform-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/iti-project-369013/zones/us-central1-b/instances/terraform-instance",
            "instance_id": "802657024903317449",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata_fingerprint": "b_neTFD6WUQ=",
            "metadata_startup_script": "sudo apt-get update -y\r\nsudo apt-get install apt-transport-https ca-certificates gnupg -y\r\nsudo apt-get install kubectl -y\r\nsudo apt-get install google-cloud-sdk-gke-gcloud-auth-plugin -y\r\n",
            "name": "terraform-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/regions/us-central1/subnetworks/tf-subnetwork",
                "subnetwork_project": "iti-project-369013"
              }
            ],
            "project": "iti-project-369013",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/zones/us-central1-b/instances/terraform-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-b"
          },
          "dependencies": [
            "data.template_file.startup_script",
            "google_compute_network.tf_network",
            "google_compute_subnetwork.tf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tf_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/iti-project-369013/global/networks/tf-network",
            "name": "tf-network",
            "project": "iti-project-369013",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "tf_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514
              }
            ],
            "creation_timestamp": "2022-11-18T18:02:10.695-08:00",
            "id": "projects/iti-project-369013/regions/us-central1/routers/tf-router",
            "name": "tf-router",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network",
            "project": "iti-project-369013",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/regions/us-central1/routers/tf-router"
          },
          "dependencies": [
            "google_compute_network.tf_network",
            "google_compute_subnetwork.tf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "tf_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "icmp_idle_timeout_sec": 30,
            "id": "iti-project-369013/us-central1/tf-router/tf-router-nat",
            "log_config": [
              {
                "enable": false,
                "filter": "ERRORS_ONLY"
              }
            ],
            "min_ports_per_vm": 0,
            "name": "tf-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "iti-project-369013",
            "region": "us-central1",
            "router": "tf-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.tf_network",
            "google_compute_router.tf_router",
            "google_compute_subnetwork.tf_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tf_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-11-18T18:01:51.903-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/iti-project-369013/regions/us-central1/subnetworks/tf-subnetwork",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "tf-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/global/networks/tf-network",
            "private_ip_google_access": true,
            "project": "iti-project-369013",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.0.1.0/24",
                "range_name": "services-range"
              },
              {
                "ip_cidr_range": "10.0.2.0/24",
                "range_name": "pod-ranges"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/iti-project-369013/regions/us-central1/subnetworks/tf-subnetwork"
          },
          "dependencies": [
            "google_compute_network.tf_network"
          ]
        }
      ]
    }
  ]
}